--- a/src/lib/i18n/ar/common.json
+++ b/src/lib/i18n/ar/common.json
@@ -15,5 +15,7 @@
   "cancel": "إلغاء",
   "submitting": "جاري الإرسال...",
   "invalid_input": "إدخال غير صحيح",
-  "edit": "تعديل"
+  "edit": "تعديل",
+  "search_placeholder": "ابحث عن الأجزاء...",
+  "no_results": "لا توجد منشورات تطابق معاييرالبحث"
 }
